# opam-sanity-basic

./: README.md  autotest_config.json  expected-tree.json  opam-sanity-basic.opam  opam-sanity-basic.opam.locked  whitesource.config
